--- a/en-EN/wiki/LargeGasTurbine.html
+++ b/en-EN/wiki/LargeGasTurbine.html
@@ -7,7 +7,7 @@
             name="viewport"
     />
     <!-- Favicon-->
-    <link href="../img/fav.png" rel="shortcut icon"/>
+    <link href="../../img/fav.png" rel="shortcut icon"/>
     <!-- Author Meta -->
     <meta content="colorlib" name="author"/>
     <!-- Meta Description -->
@@ -17,7 +17,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8"/>
     <!-- Site Title -->
-    <title>Impact Wiki - Large Steam Turbine</title>
+    <title>Impact Wiki - Large Gas Turbine</title>
 
     <link
             href="https://fonts.googleapis.com/css?family=Play:300,400,500,600,700"
@@ -26,14 +26,14 @@
     <!--
 			CSS
 			============================================= -->
-    <link href="../css/flaticon.css" rel="stylesheet"/>
-    <link href="../css/themify-icons.css" rel="stylesheet"/>
-    <link href="../css/bootstrap.css" rel="stylesheet"/>
-    <link href="../css/magnific-popup.css" rel="stylesheet"/>
-    <link href="../css/nice-select.css" rel="stylesheet"/>
-    <link href="../css/animate.min.css" rel="stylesheet"/>
-    <link href="../css/owl.carousel.css" rel="stylesheet"/>
-    <link href="../css/main.css" rel="stylesheet"/>
+    <link href="../../css/flaticon.css" rel="stylesheet"/>
+    <link href="../../css/themify-icons.css" rel="stylesheet"/>
+    <link href="../../css/bootstrap.css" rel="stylesheet"/>
+    <link href="../../css/magnific-popup.css" rel="stylesheet"/>
+    <link href="../../css/nice-select.css" rel="stylesheet"/>
+    <link href="../../css/animate.min.css" rel="stylesheet"/>
+    <link href="../../css/owl.carousel.css" rel="stylesheet"/>
+    <link href="../../css/main.css" rel="stylesheet"/>
     <style>
 
     </style>
@@ -46,17 +46,16 @@
         <div class="container main-menu">
             <div class="row align-items-center d-flex">
                 <div id="logo">
-                    <a href="../index"><img alt="" src="../img/logo.png" title=""/></a>
+                    <a href="../home"><img alt="" src="../../img/logo.png" title=""/></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li><a href="../index">Главная</a></li>
+                        <li><a href="../home">Главная</a></li>
                         <li><a href="../about">О модпаке</a></li>
                         <li><a href="../download">Скачать</a></li>
                         <li class="menu-has-children"><a class="active" href="">Wiki</a>
                             <ul>
                                 <li><a href="gt-addons">GregTech и аддоны</a></li>
-                                <li><a data-tooltip="В разработке">Другие моды</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -72,8 +71,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title text-center">
-                    <h1 class="p-black">Large Steam Turbine</h1>
-                    <h4 class="p-black">Большая паровая турбина</h4>
+                    <h1 class="p-black">Large Gas Turbine</h1>
+                    <h4 class="p-black">Большая газовая турбина</h4>
                     <hr>
                     <div class="tab-wiki menu" style="float: left;">
                         <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Описание
@@ -91,10 +90,10 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Большая паровая турбина - это многоблочная машина-генератор, добавленная модификацией
+                        Большая газовая турбина - это многоблочная машина-генератор, добавленная модификацией
                         GregTech.</br>
                         <hr>
-                        Турбина способна выработывать энергию, тратя при этом пар. Медленно разгоняется, используется
+                        Турбина способна выработывать энергию, тратя при этом газ. Медленно разгоняется, используется
                         для продолжительной выработки энергии.
 
                         <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">
@@ -106,8 +105,8 @@
                     </div>
                     <div id="content-right">
 
-                        <img class="img-fluid" src="../img/wiki/SteamLargeTrubine.png">
-                        <p>Large Steam Turbine в собранной форме</p>
+                        <img class="img-fluid" src="../../img/wiki/GasLargeTrubine.png">
+                        <p>Large Gas Turbine в собранной форме</p>
 
                     </div>
                 </div>
@@ -120,8 +119,7 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Большая Паровая Турбина работает на пару GregTech и/или на пару из IndustrialCraft 2, выводя при
-                        этом дистилированную воду вдобавок к энергии.
+                        Большая газовая турбина работает на различных газах.
                         <hr>
 
                         Турбине требуется ротор для работы. Есть множество их вариантов, различающихся по размеру,
@@ -134,47 +132,57 @@
 
                         <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">
                             Эффективность:</p>
-                        Efficiency (Эффективность) - процентное отношение, влияющее на энергетический выход турбины.
+                        Efficiency (Эффективность) - процентное отношение, влияющее на энергетический выход турбины.<br>
+
 
                         <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">
-                            Оптимальная подача:</p>
-                        Optimal Flow (Оптимальная подача) - это размер потока, необходимый для достижения оптимального
+                            Оптимальный поток:</p>
+                        Optimal Flow (Оптимальный поток) - это размер потока, необходимый для достижения оптимального
                         энергетического выхода турбины. У каждого ротора есть индивидуальное значение оптимального
                         потока.
 
-                        <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">
-                            Энергоплотность пара:</p>
+                        <p style="padding-top: 5px; margin-bottom: 5px; ">Так как турбина может принимать разный газ
+                            оптимальный поток указывается не в L/t, а в EU/t.</p>
 
-                        Fuel Value (Энергоплотность) пара = 0.5 EU/L
+                        Для газа используется Actual Optimal Flow (Реальный оптимальный поток), выполняется по
+                        формуле:<br>
+
+                        <b>Actual Optimal Flow (L/t) = Optimal Flow / (Fuel Value / 1000)</b>
+
+                        <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">
+                            Энергоплотность газа:</p>
+                        Fuel Value (Энергоплотность). Определить её можно с помощью NEI, находим нужное нам топливо и
+                        смотрим использование в турбине, там показывается энергоемкость одной капсулы.
 
                         <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">
                             Генерация энергии:</p>
                         Генерация энергии выполняется по формуле: <br>
-                        <b>EU/t = (Optimal Flow / 20) * Fuel Values * (Efficiency / 100)</b>
-
+                        <b>EU/t = Actual Optimal Flow * (Fuel Value / 1000) * (Efficiency / 100)</b>
                     </div>
                     <div id="content-right">
                         <p style="padding-top: 10px; padding-bottom: 8px">
-                            <b style="color: black;">Пример генерации энергии из пара</b>
+                            <b style="color: black;">Пример генерации энергии из газа</b>
                         </p>
-
-
                         <p style="text-align: justify;">
-                            Большой Ротор из материала Carbon с эффективностью - 120, с оптимальным потоком - 3000
-                            L/s.<br>
+                            Большой Ротор из материала Carbon с эффективностью - 120, с оптимальным потоком - 150 EU/t и
+                            Refinery Gas с энергоплотностью 128000 EU на капсулу.<br>
                             <br>
+                            Реальный опимальный поток:<br>
+                            <em>150 / (128000 / 1000) = 1 L/t.</em><br><br>
                             Генерация энергии:<br>
-                            <em>EU/t = (3000 / 20) * 0.5 * (120 / 100) = 90 EU/t.</em>
+                            <em>1 * (128000 / 1000) * (120 / 100) = 154 EU/t.</em>
                         </p>
                         <p style="padding-top: 10px; padding-bottom: 8px;">
-                            <b style="color: black;">Калькулятор генерации энергии из пара</b><br>
+                            <b style="color: black;">Калькулятор генерации энергии из газа</b><br>
                         </p>
-                        <input id="flow" placeholder="Optimal Flow (L/s)" style="width: 100%; margin-bottom: 8px;"
+                        <input id="flow" placeholder="Optimal Flow (EU/t)" style="width: 100%; margin-bottom: 8px;"
                                type="text">
                         <input id="efficienty" placeholder="Efficiency" style="width: 100%; margin-bottom: 8px;"
                                type="text">
+                        <input id="fuelvalue" placeholder="Fuel Value (in NEI)" style="width: 100%; margin-bottom: 8px;"
+                               type="text">
 
-                        <button onclick="steamLargeTurbine()" style="margin-top: 10px;">Рассчитать</button>
+                        <button onclick="gasLargeTurbine()" style="margin-top: 10px;">Рассчитать</button>
                         <p id="FlowOk" style="margin: 4px 0;"></p>
                         <p id="FlowNotOk"></p>
                     </div>
@@ -189,12 +197,12 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Для постройки этого мультиблока вам понадобятся блок: Turbine Casing.</br>
+                        Для постройки этого мультиблока вам понадобятся блок: Stainless Steel Turbine Casing.</br>
                         <hr>
                         <li>Dynamo Hatch (Сзади по центру): 1x</li>
                         <li>Maintenance Hatch (Сбоку по центру): 1x</li>
-                        <li>Input Hatch для пара (Сбоку по центру): 1x</li>
-                        <li>Output Hatch для дистилированной воды (Сбоку по центру): 1x</li>
+                        <li>Input Hatch для ufpf (Сбоку по центру): 1x</li>
+                        <li>Muffler Hatch (Сбоку по центру): 1x</li>
                         Остальные люки обслуживания не требуются.
                         <hr>
 
@@ -203,8 +211,8 @@
 
                     </div>
                     <div id="content-right">
-                        <img class="img-fluid" src="../img/wiki/SteelSolid.png" width="150">
-                        <p>Turbine Casing</p>
+                        <img class="img-fluid" src="../../img/wiki/StainlessSteel.png" width="150">
+                        <p>Stainless Steel Turbine Casing</p>
                     </div>
                 </div>
             </div>
@@ -236,19 +244,19 @@
 </div>
 <!-- ####################### End Scroll to Top Area ####################### -->
 
-<script src="../js/vendor/jquery-2.2.4.min.js"></script>
-<script src="../js/vendor/bootstrap.min.js"></script>
-<script src="../js/easing.min.js"></script>
-<script src="../js/hoverIntent.js"></script>
-<script src="../js/superfish.min.js"></script>
-<script src="../js/mn-accordion.js"></script>
-<script src="../js/jquery.ajaxchimp.min.js"></script>
-<script src="../js/jquery.magnific-popup.min.js"></script>
-<script src="../js/owl.carousel.min.js"></script>
-<script src="../js/jquery.nice-select.min.js"></script>
-<script src="../js/isotope.pkgd.min.js"></script>
-<script src="../js/mail-script.js"></script>
-<script src="../js/wow.min.js"></script>
-<script src="../js/main.js"></script>
+<script src="../../js/vendor/jquery-2.2.4.min.js"></script>
+<script src="../../js/vendor/bootstrap.min.js"></script>
+<script src="../../js/easing.min.js"></script>
+<script src="../../js/hoverIntent.js"></script>
+<script src="../../js/superfish.min.js"></script>
+<script src="../../js/mn-accordion.js"></script>
+<script src="../../js/jquery.ajaxchimp.min.js"></script>
+<script src="../../js/jquery.magnific-popup.min.js"></script>
+<script src="../../js/owl.carousel.min.js"></script>
+<script src="../../js/jquery.nice-select.min.js"></script>
+<script src="../../js/isotope.pkgd.min.js"></script>
+<script src="../../js/mail-script.js"></script>
+<script src="../../js/wow.min.js"></script>
+<script src="../../js/main.js"></script>
 </body>
 </html>
