--- a/en-EN/wiki/primwaterpump.html
+++ b/en-EN/wiki/primwaterpump.html
@@ -7,7 +7,7 @@
             name="viewport"
     />
     <!-- Favicon-->
-    <link href="../img/fav.png" rel="shortcut icon"/>
+    <link href="../../img/fav.png" rel="shortcut icon"/>
     <!-- Author Meta -->
     <meta content="colorlib" name="author"/>
     <!-- Meta Description -->
@@ -26,14 +26,14 @@
     <!--
 			CSS
 			============================================= -->
-    <link href="../css/flaticon.css" rel="stylesheet"/>
-    <link href="../css/themify-icons.css" rel="stylesheet"/>
-    <link href="../css/bootstrap.css" rel="stylesheet"/>
-    <link href="../css/magnific-popup.css" rel="stylesheet"/>
-    <link href="../css/nice-select.css" rel="stylesheet"/>
-    <link href="../css/animate.min.css" rel="stylesheet"/>
-    <link href="../css/owl.carousel.css" rel="stylesheet"/>
-    <link href="../css/main.css" rel="stylesheet"/>
+    <link href="../../css/flaticon.css" rel="stylesheet"/>
+    <link href="../../css/themify-icons.css" rel="stylesheet"/>
+    <link href="../../css/bootstrap.css" rel="stylesheet"/>
+    <link href="../../css/magnific-popup.css" rel="stylesheet"/>
+    <link href="../../css/nice-select.css" rel="stylesheet"/>
+    <link href="../../css/animate.min.css" rel="stylesheet"/>
+    <link href="../../css/owl.carousel.css" rel="stylesheet"/>
+    <link href="../../css/main.css" rel="stylesheet"/>
     <style>
 
     </style>
@@ -46,17 +46,16 @@
         <div class="container main-menu">
             <div class="row align-items-center d-flex">
                 <div id="logo">
-                    <a href="../index"><img alt="" src="../img/logo.png" title=""/></a>
+                    <a href="../home"><img alt="" src="../../img/logo.png" title=""/></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li><a href="../index">Главная</a></li>
+                        <li><a href="../home">Главная</a></li>
                         <li><a href="../about">О модпаке</a></li>
                         <li><a href="../download">Скачать</a></li>
                         <li class="menu-has-children"><a class="active" href="">Wiki</a>
                             <ul>
                                 <li><a href="gt-addons">GregTech и аддоны</a></li>
-                                <li><a data-tooltip="В разработке">Другие моды</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -100,7 +99,7 @@
                     </div>
                     <div id="content-right">
 
-                        <img class="img-fluid" src="../img/wiki/primwaterpump.png" style="transform: scale(-1, 1)">
+                        <img class="img-fluid" src="../../img/wiki/primwaterpump.png" style="transform: scale(-1, 1)">
                         <p>Primitive Water Pump в собранной форме</p>
 
                     </div>
@@ -206,10 +205,10 @@
                     </div>
                     <div id="content-right">
 
-                        <img class="img-fluid" src="../img/wiki/PrimitivePumpDeck.png" width="150">
+                        <img class="img-fluid" src="../../img/wiki/PrimitivePumpDeck.png" width="150">
                         <p>Primitive Pump Deck</p>
 
-                        <img class="img-fluid" src="../img/wiki/WoodFrameBox.png" width="150">
+                        <img class="img-fluid" src="../../img/wiki/WoodFrameBox.png" width="150">
                         <p>Wood Frame Box</p>
 
                     </div>
@@ -245,19 +244,19 @@
 </div>
 <!-- ####################### End Scroll to Top Area ####################### -->
 
-<script src="../js/vendor/jquery-2.2.4.min.js"></script>
-<script src="../js/vendor/bootstrap.min.js"></script>
-<script src="../js/easing.min.js"></script>
-<script src="../js/hoverIntent.js"></script>
-<script src="../js/superfish.min.js"></script>
-<script src="../js/mn-accordion.js"></script>
-<script src="../js/jquery.ajaxchimp.min.js"></script>
-<script src="../js/jquery.magnific-popup.min.js"></script>
-<script src="../js/owl.carousel.min.js"></script>
-<script src="../js/jquery.nice-select.min.js"></script>
-<script src="../js/isotope.pkgd.min.js"></script>
-<script src="../js/mail-script.js"></script>
-<script src="../js/wow.min.js"></script>
-<script src="../js/main.js"></script>
+<script src="../../js/vendor/jquery-2.2.4.min.js"></script>
+<script src="../../js/vendor/bootstrap.min.js"></script>
+<script src="../../js/easing.min.js"></script>
+<script src="../../js/hoverIntent.js"></script>
+<script src="../../js/superfish.min.js"></script>
+<script src="../../js/mn-accordion.js"></script>
+<script src="../../js/jquery.ajaxchimp.min.js"></script>
+<script src="../../js/jquery.magnific-popup.min.js"></script>
+<script src="../../js/owl.carousel.min.js"></script>
+<script src="../../js/jquery.nice-select.min.js"></script>
+<script src="../../js/isotope.pkgd.min.js"></script>
+<script src="../../js/mail-script.js"></script>
+<script src="../../js/wow.min.js"></script>
+<script src="../../js/main.js"></script>
 </body>
 </html>
