--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
-    <title>Impact - Главная</title>
+    <title>Impact</title>
 
     <link href="https://fonts.googleapis.com/css?family=Play:300,400,500,600,700" rel="stylesheet">
     <link href="css/flaticon.css" rel="stylesheet">
@@ -29,7 +29,6 @@
     <link href="css/animate.min.css" rel="stylesheet">
     <link href="css/owl.carousel.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
-
 
 </head>
 
@@ -42,57 +41,21 @@
     </div>
 </div>
 <!-- End Preloader Area -->
-
-<!-- Start Header Area -->
-<header id="header">
-    <div class="header-inner">
-        <div class="container main-menu">
-            <div class="row align-items-center d-flex">
-                <div id="logo">
-                    <a href="index"><img alt="" src="img/logo.png" title=""/></a>
-                </div>
-                <nav id="nav-menu-container">
-                    <ul class="nav-menu">
-                        <li class=""><a class="active" href="index">Главная</a></li>
-                        <li><a href="about">О модпаке</a></li>
-                        <li><a href="download">Скачать</a></li>
-                        <li class="menu-has-children"><a href="">Wiki</a>
-                            <ul>
-                                <li><a href="wiki/gt-addons">GregTech и аддоны</a></li>
-                                <li><a data-tooltip="В разработке">Другие моды</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </div>
-</header>
 <section class="slider" id="slider"
-         style="background: url('img/banner-img.png'); min-height: 90vh; background-size:cover;">
+         style="background: url('img/bg1002.png'); min-height: 90vh; background-size:cover;">
     <div class="container">
         <div class="row">
             <div class="col-md-7 col-sm-12 col-xs-12">
                 <div class="text">
                     <h1 class="wow fadeIn" data-wow-delay=".6s" data-wow-duration="1s">IMPACT</h1>
-                    <p>Индустриально-технологическая сборка Minecraft на версии 1.7.10 </br> с модифицированным Gregtech
-                        5.09 и другими модами</p>
+                    <a class="text-white" style="font-size: 2em" data-wow-delay=".6s" data-wow-duration="1s">Выберите язык / Choose language</a>
                     <div class="button">
-
-                        <a class="primary-btn-home" data-text="Подробнее" href="about">
-                            <span>Подробнее</span>
+                        <a class="primary-btn-home" data-text="Russian" href="ru-RU/home">
+                            <span>Русский</span>
                         </a>
-                        <a class="primary-btn-home" data-text="Скачать" href="download">
-                            <span>Скачать</span>
-
+                        <a class="primary-btn-home" data-text="English" href="en-EN/home">
+                            <span>English</span>
                         </a>
-                    </div>
-                    <div class="social-icons">
-                        <ul>
-                            <li><a href="https://discord.gg/bMf2qvd"><i class="ti-discord"></i>Discord</a></li>
-                            <li><a href="https://github.com/GT-IMPACT"><i class="ti-github"></i>GitHub</a></li>
-                            <li><a href=""><i class=""></i> </a></li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -101,23 +64,6 @@
 </section>
 
 <!-- End banner Area -->
-<!-- start footer Area -->
-<footer class="footer-area">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <p class="footer-text">
-                <p class="p-white">
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                    | Made by 4gname
-                </p>
-                </p>
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- End footer Area -->
-
 <!-- ####################### Start Scroll to Top Area ###################### -->
 <div id="back-top">
     <a href="#" title="Go to Top">
