--- a/ru-RU/wiki/ParallelSuperComputer.html
+++ b/ru-RU/wiki/ParallelSuperComputer.html
@@ -5,7 +5,7 @@
     <!-- Mobile Specific Meta -->
     <meta content="user-scalable=no" name="viewport" />
     <!-- Favicon-->
-    <link href="../img/fav.png" rel="shortcut icon" />
+    <link href="../../img/fav.png" rel="shortcut icon" />
     <!-- Author Meta -->
     <meta content="colorlib" name="author" />
     <!-- Meta Description -->
@@ -18,14 +18,14 @@
     <title>Impact Wiki - Super Parallel Computer</title>
 
     <link href="https://fonts.googleapis.com/css?family=Play:300,400,500,600,700" rel="stylesheet" />
-    <link href="../css/flaticon.css" rel="stylesheet" />
-    <link href="../css/themify-icons.css" rel="stylesheet" />
-    <link href="../css/bootstrap.css" rel="stylesheet" />
-    <link href="../css/magnific-popup.css" rel="stylesheet" />
-    <link href="../css/nice-select.css" rel="stylesheet" />
-    <link href="../css/animate.min.css" rel="stylesheet" />
-    <link href="../css/owl.carousel.css" rel="stylesheet" />
-    <link href="../css/main.css" rel="stylesheet" />
+    <link href="../../css/flaticon.css" rel="stylesheet" />
+    <link href="../../css/themify-icons.css" rel="stylesheet" />
+    <link href="../../css/bootstrap.css" rel="stylesheet" />
+    <link href="../../css/magnific-popup.css" rel="stylesheet" />
+    <link href="../../css/nice-select.css" rel="stylesheet" />
+    <link href="../../css/animate.min.css" rel="stylesheet" />
+    <link href="../../css/owl.carousel.css" rel="stylesheet" />
+    <link href="../../css/main.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -35,17 +35,16 @@
         <div class="container main-menu">
             <div class="row align-items-center d-flex">
                 <div id="logo">
-                    <a href="../index"><img alt="" src="../img/logo.png" title="" /></a>
+                    <a href="../home"><img alt="" src="../../img/logo.png" title="" /></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li><a href="../index">Главная</a></li>
+                        <li><a href="../home">Главная</a></li>
                         <li><a href="../about">О модпаке</a></li>
                         <li><a href="../download">Скачать</a></li>
                         <li class="menu-has-children"><a class="active" href="">Wiki</a>
                             <ul>
                                 <li><a href="gt-addons">GregTech и аддоны</a></li>
-                                <li><a data-tooltip="В разработке">Другие моды</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -94,7 +93,7 @@
                         количеству выполняемых рецептов).
                     </div>
                     <div id="content-right">
-                        <img class="img-fluid" src="../img/wiki/ParComputer.png">
+                        <img class="img-fluid" src="../../img/wiki/ParComputer.png">
                         <br>Компьютер в собранной форме<br> (минимальная структура)
                     </div>
                 </div>
@@ -144,13 +143,13 @@
                         </div>
                     <div id="content-right">
 
-                        <img class="img-fluid" src="../img/wiki/connectTowerComp.gif" style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
+                        <img class="img-fluid" src="../../img/wiki/connectTowerComp.gif" style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
                         <p style="padding-top: 10px; padding-bottom: 8px">Настройка частоты для подключения Компьютера к Коммуникационной Вышке</p>
 
-                        <img class="img-fluid" src="../img/wiki/ComputerRackGUI.png" style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
+                        <img class="img-fluid" src="../../img/wiki/ComputerRackGUI.png" style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
                         <p style="padding-top: 10px; padding-bottom: 8px">Параллельные Процессоры в Компьютерной Стойке</p>
 
-                        <img class="img-fluid" src="../img/wiki/connectMachineComp.gif" style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
+                        <img class="img-fluid" src="../../img/wiki/connectMachineComp.gif" style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
                         <p style="padding-top: 10px; padding-bottom: 8px">Настройка передачи ПП с компьютера на машину</p>
                     </div>
                 </div>
@@ -181,10 +180,10 @@
                     </div>
                     <div id="content-right">
                         <!-- todo casings -->
-                        <img class="img-fluid" src="../img/wiki/ComputerCasing.png" width="150">
+                        <img class="img-fluid" src="../../img/wiki/ComputerCasing.png" width="150">
                         <p>Computer Casing</p>
 
-                        <img class="img-fluid" src="../img/wiki/EmptyRackCasing.png" width="150">
+                        <img class="img-fluid" src="../../img/wiki/EmptyRackCasing.png" width="150">
                         <p>Empty Rack Casing</p>
 
                     </div>
@@ -222,20 +221,20 @@
 </div>
 <!-- ####################### End Scroll to Top Area ####################### -->
 
-<script src="../js/vendor/jquery-2.2.4.min.js"></script>
-<script src="../js/vendor/bootstrap.min.js"></script>
-<script src="../js/easing.min.js"></script>
-<script src="../js/hoverIntent.js"></script>
-<script src="../js/superfish.min.js"></script>
-<script src="../js/mn-accordion.js"></script>
-<script src="../js/jquery.ajaxchimp.min.js"></script>
-<script src="../js/jquery.magnific-popup.min.js"></script>
-<script src="../js/owl.carousel.min.js"></script>
-<script src="../js/jquery.nice-select.min.js"></script>
-<script src="../js/isotope.pkgd.min.js"></script>
-<script src="../js/mail-script.js"></script>
-<script src="../js/wow.min.js"></script>
-<script src="../js/main.js"></script>
+<script src="../../js/vendor/jquery-2.2.4.min.js"></script>
+<script src="../../js/vendor/bootstrap.min.js"></script>
+<script src="../../js/easing.min.js"></script>
+<script src="../../js/hoverIntent.js"></script>
+<script src="../../js/superfish.min.js"></script>
+<script src="../../js/mn-accordion.js"></script>
+<script src="../../js/jquery.ajaxchimp.min.js"></script>
+<script src="../../js/jquery.magnific-popup.min.js"></script>
+<script src="../../js/owl.carousel.min.js"></script>
+<script src="../../js/jquery.nice-select.min.js"></script>
+<script src="../../js/isotope.pkgd.min.js"></script>
+<script src="../../js/mail-script.js"></script>
+<script src="../../js/wow.min.js"></script>
+<script src="../../js/main.js"></script>
 </body>
 
 </html>
