--- a/ru-RU/wiki/cokeoven.html
+++ b/ru-RU/wiki/cokeoven.html
@@ -7,7 +7,7 @@
             name="viewport"
     />
     <!-- Favicon-->
-    <link href="../img/fav.png" rel="shortcut icon"/>
+    <link href="../../img/fav.png" rel="shortcut icon"/>
     <!-- Author Meta -->
     <meta content="colorlib" name="author"/>
     <!-- Meta Description -->
@@ -17,7 +17,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8"/>
     <!-- Site Title -->
-    <title>Impact Wiki - Coke Oven</title><!-- todo -->
+    <title>Impact Wiki - Coke Oven</title>
 
     <link
             href="https://fonts.googleapis.com/css?family=Play:300,400,500,600,700"
@@ -26,14 +26,14 @@
     <!--
 			CSS
 			============================================= -->
-    <link href="../css/flaticon.css" rel="stylesheet"/>
-    <link href="../css/themify-icons.css" rel="stylesheet"/>
-    <link href="../css/bootstrap.css" rel="stylesheet"/>
-    <link href="../css/magnific-popup.css" rel="stylesheet"/>
-    <link href="../css/nice-select.css" rel="stylesheet"/>
-    <link href="../css/animate.min.css" rel="stylesheet"/>
-    <link href="../css/owl.carousel.css" rel="stylesheet"/>
-    <link href="../css/main.css" rel="stylesheet"/>
+    <link href="../../css/flaticon.css" rel="stylesheet"/>
+    <link href="../../css/themify-icons.css" rel="stylesheet"/>
+    <link href="../../css/bootstrap.css" rel="stylesheet"/>
+    <link href="../../css/magnific-popup.css" rel="stylesheet"/>
+    <link href="../../css/nice-select.css" rel="stylesheet"/>
+    <link href="../../css/animate.min.css" rel="stylesheet"/>
+    <link href="../../css/owl.carousel.css" rel="stylesheet"/>
+    <link href="../../css/main.css" rel="stylesheet"/>
     <style>
 
     </style>
@@ -46,17 +46,16 @@
         <div class="container main-menu">
             <div class="row align-items-center d-flex">
                 <div id="logo">
-                    <a href="../index"><img alt="" src="../img/logo.png" title=""/></a>
+                    <a href="../home"><img alt="" src="../../img/logo.png" title=""/></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li><a href="../index">Главная</a></li>
+                        <li><a href="../home">Главная</a></li>
                         <li><a href="../about">О модпаке</a></li>
                         <li><a href="../download">Скачать</a></li>
                         <li class="menu-has-children"><a class="active" href="">Wiki</a>
                             <ul>
                                 <li><a href="gt-addons">GregTech и аддоны</a></li>
-                                <li><a data-tooltip="В разработке">Другие моды</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -72,8 +71,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title text-center">
-                    <h1 class="p-black">Coke Oven</h1><!-- todo -->
-                    <h4 class="p-black">Коксовая печь</h4><!-- todo -->
+                    <h1 class="p-black">Coke Oven</h1>
+                    <h4 class="p-black">Коксовая печь</h4>
                     <hr>
                     <div class="tab-wiki menu" style="float: left;">
                         <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Описание
@@ -91,13 +90,16 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        <!-- todo -->
-                        123
+                        Коксовая печь - это многоблочная машина, добавленная модификацией Impact Core.</br>
+                        <hr>
+                        Предназначена для производство древесного/коксового угля и креозота на начальных этапах.
+
+
                     </div>
                     <div id="content-right">
-                        <!-- todo -->
-                        <img class="img-fluid" src="../img/wiki/cokeoven.png">
-                        <p> в собранной форме</p>
+
+                        <img class="img-fluid" src="../../img/wiki/cokeoven.png">
+                        <p>Coke Oven в собранной форме</p>
 
                     </div>
                 </div>
@@ -110,16 +112,22 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        <!-- todo -->
-                    </div>
-                    <div id="content-right"> <!-- todo -->
+                        Печь выполняет рецепты, которые можно увидеть в NEI.
+                        <hr>
 
-                        <img class="img-fluid" src="../img/wiki/coRecipe1.png"
+                        Необычной механики у данной машины нет.
+
+                        Важное замечание - все рецепты выполняются за одинаковое время: 90 секунд.
+
+                    </div>
+                    <div id="content-right">
+
+                        <img class="img-fluid" src="../../img/wiki/coRecipe1.png"
                              style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
 
                         <p style="padding-top: 10px; padding-bottom: 8px">Коксование древесины</p>
 
-                        <img class="img-fluid" src="../img/wiki/coRecipe2.png"
+                        <img class="img-fluid" src="../../img/wiki/coRecipe2.png"
                              style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
 
                         <p style="padding-top: 10px; padding-bottom: 8px">Коксование угля</p>
@@ -137,17 +145,26 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
+                        Для постройки этого мультиблока вам понадобится блок Coke Oven Brick.</br>
+                        <hr>
+                        <li>Primitive Output Hatch x1</li>
+                        <li>Primitive Output Bus x1</li>
+                        <li>Primitive Input Bus x1</li>
+                        <br>
+                        Люки обслуживания имеют такие же текстуры как и Coke Oven Brick.<br>
+                        Остальные люки обслуживания не требуются.<br>
 
-                        <!-- todo описание 3 вкладка -->
+                        <br>*Не забудьте включить мультиблок с помощью Soft Mallet
+                        <hr>
 
                     </div>
                     <div id="content-right">
-                        <!-- todo casings -->
-                        <img class="img-fluid" src="../img/wiki/cokeovenbrick.png" width="150">
-                        <p>НАЗВАНИЕ ПИКЧИ 1</p>
 
-                        <img class="img-fluid" src="../img/wiki/cokeovenhatch.png" width="150">
-                        <p>НАЗВАНИЕ ПИКЧИ 2</p>
+                        <img class="img-fluid" src="../../img/wiki/cokeovenbrick.png" width="150">
+                        <p>Coke Oven Brick</p>
+
+                        <img class="img-fluid" src="../../img/wiki/cokeovenhatch.png" width="150">
+                        <p>Primitive Hatches</p>
 
                     </div>
                 </div>
@@ -183,19 +200,19 @@
 </div>
 <!-- ####################### End Scroll to Top Area ####################### -->
 
-<script src="../js/vendor/jquery-2.2.4.min.js"></script>
-<script src="../js/vendor/bootstrap.min.js"></script>
-<script src="../js/easing.min.js"></script>
-<script src="../js/hoverIntent.js"></script>
-<script src="../js/superfish.min.js"></script>
-<script src="../js/mn-accordion.js"></script>
-<script src="../js/jquery.ajaxchimp.min.js"></script>
-<script src="../js/jquery.magnific-popup.min.js"></script>
-<script src="../js/owl.carousel.min.js"></script>
-<script src="../js/jquery.nice-select.min.js"></script>
-<script src="../js/isotope.pkgd.min.js"></script>
-<script src="../js/mail-script.js"></script>
-<script src="../js/wow.min.js"></script>
-<script src="../js/main.js"></script>
+<script src="../../js/vendor/jquery-2.2.4.min.js"></script>
+<script src="../../js/vendor/bootstrap.min.js"></script>
+<script src="../../js/easing.min.js"></script>
+<script src="../../js/hoverIntent.js"></script>
+<script src="../../js/superfish.min.js"></script>
+<script src="../../js/mn-accordion.js"></script>
+<script src="../../js/jquery.ajaxchimp.min.js"></script>
+<script src="../../js/jquery.magnific-popup.min.js"></script>
+<script src="../../js/owl.carousel.min.js"></script>
+<script src="../../js/jquery.nice-select.min.js"></script>
+<script src="../../js/isotope.pkgd.min.js"></script>
+<script src="../../js/mail-script.js"></script>
+<script src="../../js/wow.min.js"></script>
+<script src="../../js/main.js"></script>
 </body>
 </html>
