--- a/en-EN/download.html
+++ b/en-EN/download.html
@@ -7,7 +7,7 @@
             name="viewport"
     />
     <!-- Favicon-->
-    <link href="img/fav.png" rel="shortcut icon"/>
+    <link href="../img/fav.png" rel="shortcut icon"/>
     <!-- Author Meta -->
     <meta content="colorlib" name="author"/>
     <!-- Meta Description -->
@@ -17,10 +17,10 @@
     <!-- meta character set -->
     <meta charset="UTF-8"/>
     <meta content="website" property="og:type"/>
-    <meta content="Обновление IMPACT" property="og:description"/>
-    <meta content="IMPACT 1.0.0.1" name="title"/>
+    <meta content="Update IMPACT" property="og:description"/>
+    <meta content="IMPACT" name="title"/>
     <!-- Site Title -->
-    <title>Impact - Скачать</title>
+    <title>Impact - download</title>
 
     <link
             href="https://fonts.googleapis.com/css?family=Play:300,400,500,600,700"
@@ -28,14 +28,14 @@
     />
     <!--CSS============================================= -->
 
-    <link href="css/flaticon.css" rel="stylesheet"/>
-    <link href="css/themify-icons.css" rel="stylesheet"/>
-    <link href="css/bootstrap.css" rel="stylesheet"/>
-    <link href="css/magnific-popup.css" rel="stylesheet"/>
-    <link href="css/nice-select.css" rel="stylesheet"/>
-    <link href="css/animate.min.css" rel="stylesheet"/>
-    <link href="css/owl.carousel.css" rel="stylesheet"/>
-    <link href="css/main.css" rel="stylesheet"/>
+    <link href="../css/flaticon.css" rel="stylesheet"/>
+    <link href="../css/themify-icons.css" rel="stylesheet"/>
+    <link href="../css/bootstrap.css" rel="stylesheet"/>
+    <link href="../css/magnific-popup.css" rel="stylesheet"/>
+    <link href="../css/nice-select.css" rel="stylesheet"/>
+    <link href="../css/animate.min.css" rel="stylesheet"/>
+    <link href="../css/owl.carousel.css" rel="stylesheet"/>
+    <link href="../css/main.css" rel="stylesheet"/>
 </head>
 <body>
 <!-- Start Header Area -->
@@ -44,17 +44,16 @@
         <div class="container main-menu">
             <div class="row align-items-center d-flex">
                 <div id="logo">
-                    <a href="index"><img alt="" src="img/logo.png" title=""/></a>
+                    <a href="home"><img alt="" src="../img/logo.png" title=""/></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li class=""><a href="index">Главная</a></li>
-                        <li><a class="" href="about">О модпаке</a></li>
-                        <li><a class="active" href="download">Скачать</a></li>
+                        <li class=""><a href="home">Home</a></li>
+                        <li><a class="" href="about">About</a></li>
+                        <li><a class="active" href="download">Download</a></li>
                         <li class="menu-has-children"><a href="">Wiki</a>
                             <ul>
-                                <li><a href="wiki/gt-addons">GregTech и аддоны</a></li>
-                                <li><a data-tooltip="В разработке">Другие моды</a></li>
+                                <li><a href="wiki/gt-addons">GregTech and Addons</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -69,8 +68,8 @@
     <div class="container">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="about-content col-lg-12">
-                <h1 class="text-white">Modpack IMPACT</h1>
-                <p>Актуальная версия / Latest version: 1.0.0.2</p>
+                <h1 class="text-white">MODPACK IMPACT</h1>
+                <p>Latest version: 1.0.0.2</p>
             </div>
         </div>
     </div>
@@ -86,16 +85,13 @@
                     <h2 class="text-center"><p class="p-black">CLIENT | SERVER</p></h2>
                 </div>
                 <div class="text-center" class="mb-35 wow fadeIn" data-wow-delay=".3s" data-wow-duration=".8s">
-                    <p>Скачать актуальную версию / Download latest version</p>
+                    <p>Download latest version</p>
                     <div class="">
-                        <p style="color: #000; font-weight:bold;">Перед скачиванием прочтите <a
-                                href="https://docs.google.com/document/d/1LebeDWaoNbqKscqCMzSA5WocuJ_RaUruF5jBYZPbKP0/edit?usp=sharing"
-                                target="_blank">список
-                            изменений</a></p>
                         <p style="color: #000; font-weight:bold;">Please read <a
                                 href="https://docs.google.com/document/d/11W_P3M57shuGuRf_Uo6H90ND308NkukpL20iVnFwoHA/edit?usp=sharing"
                                 target="_blank">changelog</a>
-                            before download</p>
+                            before download
+                        </p>
                     </div>
                     <div class="align-items-center justify-content-center text-center">
                         <a class="primary-btn"
@@ -112,11 +108,11 @@
                     </div>
                     <div class="align-items-center justify-content-center text-center">
                         </br>
-                        Предыдущие версии / Previous versions: <a
+                        Previous versions: <a
                             href="https://drive.google.com/drive/folders/1ELUpwTLi2JbzshQvqE4p-sszpAhIBnDj?usp=sharing"
                             target="_blank">click</a>
                         </br>
-                        Рекомендуемые ядра для сервера / Recommended cores for the server: <a
+                        Recommended cores for the server: <a
                             href="https://gtimpact.space/go/server_cores/"
                             target="_blank">click</a>
                     </div>
@@ -162,8 +158,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title text-center">
-                    <h2 class="p-black">УСТАНОВКА КЛИЕНТА</h2>
-                    <h4>Установка только для лицензионной версии Minecraft</h4>
+                    <h2 class="p-black">INSTALL CLIENT</h2>
+                    <h4>Installation only for licensed version of Minecraft</h4>
                 </div>
             </div>
         </div>
@@ -171,42 +167,39 @@
         <div class="row align-items-center justify-content-center">
             <div class="text-center">
 
-                <p class="p-size">1. После скачивания клиента, вам нужно скачать MultiMC с офф сайта: <a
+                <p class="p-size">1. After downloading the client, you need to download MultiMC from the off site: <a
                         href="http://multimc.org/">multimc.org</a>.</p>
-                <img alt="" class="img-scale" src="img/guide/1.png">
+                <img alt="" class="img-scale" src="../img/guide/1.png">
 
-                <p class="p-size"></br>2. В архиве будет папка MultiMC. Ее перенести в нужное вам место и открыть
+                <p class="p-size"></br>2. The archive will contain a MultiMC folder. Move it to the place you need and open
                     MultiMC.</p>
-                <img alt="" class="img-scale" src="img/guide/2.png">
+                <img alt="" class="img-scale" src="../img/guide/2.png">
 
-                <p class="p-size"></br>3. Выберите язык для интерфейса MultiMC и нажмите далее.</p>
-                <img alt="" class="img-scale" src="img/guide/3.png">
+                <p class="p-size"></br>3. Select the language for the MultiMC interface and click next.</p>
+                <img alt="" class="img-scale" src="../img/guide/3.png">
 
-                <p class="p-size"></br>4. Выберите нужную версию Java. Задайте количество минимального и максимального
-                    объема оперативной памяти (ОЗУ)</p>
-                <img alt="" class="img-scale" src="img/guide/4.png">
+                <p class="p-size"></br>4. Select the required Java version. Set the minimum and maximum amount of random access memory (RAM)</p>
+                <img alt="" class="img-scale" src="../img/guide/4.png">
 
-                <p class="p-size"></br>5. Установка MultiMC завершена. Нажмите "Завершить" для продолжения</p>
-                <img alt="" class="img-scale" src="img/guide/5.png">
+                <p class="p-size"></br>5. Installation of MultiMC is complete. Click Finish to continue</p>
+                <img alt="" class="img-scale" src="../img/guide/5.png">
 
-                <p class="p-size"></br>6. Далее вам нужно подключить ваш аккаунт Minecraft. Нажмите на "Профили", далее
-                    на "Управление учетными записями"</p>
-                <img alt="" class="img-scale" src="img/guide/6.png">
+                <p class="p-size"></br>6. Next, you need to connect your Minecraft account. Click on "Profiles", on "Account Management""</p>
+                <img alt="" class="img-scale" src="../img/guide/6.png">
 
-                <p class="p-size"></br>7. Далее нажмите "Добавить", в открывшемся окне введите свои данные от аккаунта
-                    Minecraft и нажмите "ОК"</p>
-                <img alt="" class="img-scale" src="img/guide/7.png">
+                <p class="p-size"></br>7. Then click "Add", in the window that opens, enter your data from your account
+                    Minecraft and click "OK"</p>
+                <img alt="" class="img-scale" src="../img/guide/7.png">
 
-                <p class="p-size"></br>8. Теперь нужно создать новую сборку, для этого нажмите "Добавить сборку"</p>
-                <img alt="" class="img-scale" src="img/guide/8.png">
+                <p class="p-size"></br>8. Now you need to create a new modpack, for this click "Add Modpack"</p>
+                <img alt="" class="img-scale" src="../img/guide/8.png">
 
-                <p class="p-size"></br>9. В открывшемся окне нужно написать название сборки и выбрать "Импорт из zip",
-                    далее нажать на обзор и указать путь к скачаному архиву со сборкой. После нажать на "ОК"</p>
-                <img alt="" class="img-scale" src="img/guide/9.png">
+                <p class="p-size"></br>9. In the window that opens, you need to write the name of the assembly and select "Import from zip",
+                    then click on the overview and specify the path to the downloaded archive with the assembly. Then click on "OK"</p>
+                <img alt="" class="img-scale" src="../img/guide/9.png">
 
-                <p class="p-size"></br>10. Готово. Теперь можно запускать для игры, для этого нажмите "Запуск". Приятной
-                    игры!</p>
-                <img alt="" class="img-scale" src="img/guide/10.png">
+                <p class="p-size"></br>10. Done. Now you can start for the game, for this click "Start". Have a good game!</p>
+                <img alt="" class="img-scale" src="../img/guide/10.png">
 
             </div>
         </div>
@@ -239,23 +232,23 @@
 </div>
 <!-- ####################### End Scroll to Top Area ####################### -->
 
-<script src="js/vendor/jquery-2.2.4.min.js"></script>
-<script src="js/vendor/bootstrap.min.js"></script>
+<script src="../js/vendor/jquery-2.2.4.min.js"></script>
+<script src="../js/vendor/bootstrap.min.js"></script>
 <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"
         type="text/javascript"
 ></script>
-<script src="js/easing.min.js"></script>
-<script src="js/hoverIntent.js"></script>
-<script src="js/superfish.min.js"></script>
-<script src="js/mn-accordion.js"></script>
-<script src="js/jquery.ajaxchimp.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.nice-select.min.js"></script>
-<script src="js/isotope.pkgd.min.js"></script>
-<script src="js/mail-script.js"></script>
-<script src="js/wow.min.js"></script>
-<script src="js/main.js"></script>
+<script src="../js/easing.min.js"></script>
+<script src="../js/hoverIntent.js"></script>
+<script src="../js/superfish.min.js"></script>
+<script src="../js/mn-accordion.js"></script>
+<script src="../js/jquery.ajaxchimp.min.js"></script>
+<script src="../js/jquery.magnific-popup.min.js"></script>
+<script src="../js/owl.carousel.min.js"></script>
+<script src="../js/jquery.nice-select.min.js"></script>
+<script src="../js/isotope.pkgd.min.js"></script>
+<script src="../js/mail-script.js"></script>
+<script src="../js/wow.min.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
