--- a/en-EN/wiki/pyrolyse.html
+++ b/en-EN/wiki/pyrolyse.html
@@ -7,7 +7,7 @@
             name="viewport"
     />
     <!-- Favicon-->
-    <link href="../img/fav.png" rel="shortcut icon"/>
+    <link href="../../img/fav.png" rel="shortcut icon"/>
     <!-- Author Meta -->
     <meta content="colorlib" name="author"/>
     <!-- Meta Description -->
@@ -17,7 +17,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8"/>
     <!-- Site Title -->
-    <title>Impact Wiki - Advanced Pyrolyse Oven</title>
+    <title>Impact Wiki - Pyrolyse Oven</title>
 
     <link
             href="https://fonts.googleapis.com/css?family=Play:300,400,500,600,700"
@@ -26,14 +26,14 @@
     <!--
 			CSS
 			============================================= -->
-    <link href="../css/flaticon.css" rel="stylesheet"/>
-    <link href="../css/themify-icons.css" rel="stylesheet"/>
-    <link href="../css/bootstrap.css" rel="stylesheet"/>
-    <link href="../css/magnific-popup.css" rel="stylesheet"/>
-    <link href="../css/nice-select.css" rel="stylesheet"/>
-    <link href="../css/animate.min.css" rel="stylesheet"/>
-    <link href="../css/owl.carousel.css" rel="stylesheet"/>
-    <link href="../css/main.css" rel="stylesheet"/>
+    <link href="../../css/flaticon.css" rel="stylesheet"/>
+    <link href="../../css/themify-icons.css" rel="stylesheet"/>
+    <link href="../../css/bootstrap.css" rel="stylesheet"/>
+    <link href="../../css/magnific-popup.css" rel="stylesheet"/>
+    <link href="../../css/nice-select.css" rel="stylesheet"/>
+    <link href="../../css/animate.min.css" rel="stylesheet"/>
+    <link href="../../css/owl.carousel.css" rel="stylesheet"/>
+    <link href="../../css/main.css" rel="stylesheet"/>
     <style>
 
     </style>
@@ -46,17 +46,16 @@
         <div class="container main-menu">
             <div class="row align-items-center d-flex">
                 <div id="logo">
-                    <a href="../index"><img alt="" src="../img/logo.png" title=""/></a>
+                    <a href="../home"><img alt="" src="../../img/logo.png" title=""/></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li><a href="../index">Главная</a></li>
+                        <li><a href="../home">Главная</a></li>
                         <li><a href="../about">О модпаке</a></li>
                         <li><a href="../download">Скачать</a></li>
                         <li class="menu-has-children"><a class="active" href="">Wiki</a>
                             <ul>
                                 <li><a href="gt-addons">GregTech и аддоны</a></li>
-                                <li><a data-tooltip="В разработке">Другие моды</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -72,8 +71,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title text-center">
-                    <h1 class="p-black">Advanced Pyrolyse Oven</h1>
-                    <h4 class="p-black">Продвинутая Пиролизная печь</h4>
+                    <h1 class="p-black">Pyrolyse Oven</h1>
+                    <h4 class="p-black">Пиролизная печь</h4>
                     <hr>
                     <div class="tab-wiki menu" style="float: left;">
                         <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Описание
@@ -91,21 +90,17 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Продвинутая Пиролизная печь - это многоблочная машина, добавленная модификацией Impact
-                        Core.</br>
+                        Пиролизная печь - это многоблочная машина, добавленная модификацией Impact Core.</br>
                         <hr>
                         Принцип работы пиролизной печи основан на термическом разложении органических веществ на
                         пиролизные газы и твердые остатки.
-                        <br><br>
-                        Продвинутая Пиролизная печь отличается от обычной <a href="pyrolyse">Пиролизной Печи</a> тем,
-                        что имеет <a class="text-center" data-tooltip="Выполнение нескольких рецептов за раз в одно время"
-                                     style="color: #007bff;">параллельность</a>.
+
 
                     </div>
                     <div id="content-right">
 
-                        <img class="img-fluid" src="../img/wiki/AdvPyrolyse.png">
-                        <p>Advanced Pyrolyse Oven в собранной форме</p>
+                        <img class="img-fluid" src="../../img/wiki/purolyse.png">
+                        <p>Pyrolyse Oven в собранной форме</p>
 
                     </div>
                 </div>
@@ -130,23 +125,10 @@
                         <li>На 28 секунде - CO2 Gas (216L)</li>
                         <li>На 35 секунде - Wood Tar (1440L) и Charcoal (5)</li>
 
-                        <br>
-                        <p style="font-weight: bold; margin-bottom: -5px">Важно!</p>
-                        Машина в зависимости от тира Energy Hatch выполняет за раз несколько рецептов (LV - 2x, MV - 4x,
-                        HV - 6x .. Тир * 2)
-                        <br><br>
-                        <p style="font-weight: bold; margin-bottom: -5px">Расход энергии:</p>
-                        EU/t = EU/t (по рецепту) * количество одновременных рецептов * тир Energy Hatch / 2
-                        <br><br>
-                        Пример:<br>
-                        Тир Energy Hatch - MV = 2, значит максимальная параллельность = 2 * 2 = 4<br>
-                        EU/t = 20 * 4 * 2 / 2 = 80 EU/t - при условии что можно выполнить 4 рецепта за раз, если рецепт
-                        запустить 1 за раз, то будет 20 EU/t<br>
-
                     </div>
                     <div id="content-right">
 
-                        <img class="img-fluid" src="../img/wiki/pyroRecipeNew.png"
+                        <img class="img-fluid" src="../../img/wiki/pyroRecipeNew.png"
                              style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
 
                         <p style="padding-top: 10px; padding-bottom: 8px">Пиролиз опилок</p>
@@ -163,11 +145,11 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Для постройки этого мультиблока вам понадобятся 3 типа блоков: HSLA Machine Casing, Steel Pipe
-                        Casing и HSLA Frame Box.</br>
+                        Для постройки этого мультиблока вам понадобятся 3 типа блоков: Solid Steel Machine Casing, Steel
+                        Pipe Casing и Steel Frame Box.</br>
                         <hr>
-                        Люки обслуживания (устанавливаются в любом месте вместо HSLA Machine Casing):
-                        <li>Energy Hatch: 1x</li>
+                        Люки обслуживания (устанавливаются в любом месте вместо Solid Steel Machine Casing):
+                        <li>LV Energy Hatch: 1x</li>
                         <li>Maintenance Hatch: 1x</li>
                         <li>Muffler Hatch: 1x</li>
                         <li>Output Bus: до 1x</li>
@@ -179,22 +161,23 @@
                         <p>Для включения голограммы (подсказка при постройке) используйте Multiblock Machine Blueprint
                             из мода TecTech, кликните им по контролеру мультиблока.</p>
 
+
                         <p style="font-weight: bold; margin-bottom: -5px">Важно!</p>
                         <p>Так так в структуре возможна установка только одного Output Hatch, возникает вопрос как
                             выводить все жидкости (5 видов) из одного хэтча. Рекомендуется использовать многожильные
                             трубы (Nonuple Fluid Pipe).</p>
-
+                        <p>Пиролизная печь не ускоряется, менять Energy Hatch не имеет смысла.</p>
                     </div>
                     <div id="content-right">
 
-                        <img class="img-fluid" src="../img/wiki/HSLA.png" width="150">
-                        <p>HSLA Machine Casing</p>
+                        <img class="img-fluid" src="../../img/wiki/SteelSolid.png" width="150">
+                        <p>Solid Steel Machine Casing</p>
 
-                        <img class="img-fluid" src="../img/wiki/SteelPipe.png" width="150">
+                        <img class="img-fluid" src="../../img/wiki/SteelPipe.png" width="150">
                         <p>Steel Pipe Casing</p>
 
-                        <img class="img-fluid" src="../img/wiki/SteelFrame.png" width="150">
-                        <p>HSLA Frame Box</p>
+                        <img class="img-fluid" src="../../img/wiki/SteelFrame.png" width="150">
+                        <p>Steel Frame Box</p>
 
                     </div>
                 </div>
@@ -230,19 +213,19 @@
 </div>
 <!-- ####################### End Scroll to Top Area ####################### -->
 
-<script src="../js/vendor/jquery-2.2.4.min.js"></script>
-<script src="../js/vendor/bootstrap.min.js"></script>
-<script src="../js/easing.min.js"></script>
-<script src="../js/hoverIntent.js"></script>
-<script src="../js/superfish.min.js"></script>
-<script src="../js/mn-accordion.js"></script>
-<script src="../js/jquery.ajaxchimp.min.js"></script>
-<script src="../js/jquery.magnific-popup.min.js"></script>
-<script src="../js/owl.carousel.min.js"></script>
-<script src="../js/jquery.nice-select.min.js"></script>
-<script src="../js/isotope.pkgd.min.js"></script>
-<script src="../js/mail-script.js"></script>
-<script src="../js/wow.min.js"></script>
-<script src="../js/main.js"></script>
+<script src="../../js/vendor/jquery-2.2.4.min.js"></script>
+<script src="../../js/vendor/bootstrap.min.js"></script>
+<script src="../../js/easing.min.js"></script>
+<script src="../../js/hoverIntent.js"></script>
+<script src="../../js/superfish.min.js"></script>
+<script src="../../js/mn-accordion.js"></script>
+<script src="../../js/jquery.ajaxchimp.min.js"></script>
+<script src="../../js/jquery.magnific-popup.min.js"></script>
+<script src="../../js/owl.carousel.min.js"></script>
+<script src="../../js/jquery.nice-select.min.js"></script>
+<script src="../../js/isotope.pkgd.min.js"></script>
+<script src="../../js/mail-script.js"></script>
+<script src="../../js/wow.min.js"></script>
+<script src="../../js/main.js"></script>
 </body>
 </html>
