--- a/ru-RU/wiki/primwaterpump.html
+++ b/ru-RU/wiki/primwaterpump.html
@@ -7,7 +7,7 @@
             name="viewport"
     />
     <!-- Favicon-->
-    <link href="../img/fav.png" rel="shortcut icon"/>
+    <link href="../../img/fav.png" rel="shortcut icon"/>
     <!-- Author Meta -->
     <meta content="colorlib" name="author"/>
     <!-- Meta Description -->
@@ -17,7 +17,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8"/>
     <!-- Site Title -->
-    <title>Impact Wiki - Electric Water Drilling Rig</title>
+    <title>Impact Wiki - Primitive Water Pump</title>
 
     <link
             href="https://fonts.googleapis.com/css?family=Play:300,400,500,600,700"
@@ -26,14 +26,14 @@
     <!--
 			CSS
 			============================================= -->
-    <link href="../css/flaticon.css" rel="stylesheet"/>
-    <link href="../css/themify-icons.css" rel="stylesheet"/>
-    <link href="../css/bootstrap.css" rel="stylesheet"/>
-    <link href="../css/magnific-popup.css" rel="stylesheet"/>
-    <link href="../css/nice-select.css" rel="stylesheet"/>
-    <link href="../css/animate.min.css" rel="stylesheet"/>
-    <link href="../css/owl.carousel.css" rel="stylesheet"/>
-    <link href="../css/main.css" rel="stylesheet"/>
+    <link href="../../css/flaticon.css" rel="stylesheet"/>
+    <link href="../../css/themify-icons.css" rel="stylesheet"/>
+    <link href="../../css/bootstrap.css" rel="stylesheet"/>
+    <link href="../../css/magnific-popup.css" rel="stylesheet"/>
+    <link href="../../css/nice-select.css" rel="stylesheet"/>
+    <link href="../../css/animate.min.css" rel="stylesheet"/>
+    <link href="../../css/owl.carousel.css" rel="stylesheet"/>
+    <link href="../../css/main.css" rel="stylesheet"/>
     <style>
 
     </style>
@@ -46,17 +46,16 @@
         <div class="container main-menu">
             <div class="row align-items-center d-flex">
                 <div id="logo">
-                    <a href="../index"><img alt="" src="../img/logo.png" title=""/></a>
+                    <a href="../home"><img alt="" src="../../img/logo.png" title=""/></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li><a href="../index">Главная</a></li>
+                        <li><a href="../home">Главная</a></li>
                         <li><a href="../about">О модпаке</a></li>
                         <li><a href="../download">Скачать</a></li>
                         <li class="menu-has-children"><a class="active" href="">Wiki</a>
                             <ul>
                                 <li><a href="gt-addons">GregTech и аддоны</a></li>
-                                <li><a data-tooltip="В разработке">Другие моды</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -72,8 +71,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title text-center">
-                    <h1 class="p-black">Electric Water Drilling Rig</h1>
-                    <h4 class="p-black">Электрическая буровая водокачка</h4>
+                    <h1 class="p-black">Primitive Water Pump</h1>
+                    <h4 class="p-black">Примитивная водокачка</h4>
                     <hr>
                     <div class="tab-wiki menu" style="float: left;">
                         <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Описание
@@ -91,17 +90,17 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Электрическая буровая водокачка - это многоблочная машина, добавленная модификацией Impact
-                        Core.</br>
+                        Примитивная водокачка - это многоблочная машина, добавленная модификацией Impact Core.</br>
                         <hr>
-                        Предназначена для выкачивания воды из бедрока с помощью электричества.
+                        Предназначена для генерации воды на начальных этапах и в трудодоступных местах без
+                        электропитания.
 
 
                     </div>
                     <div id="content-right">
 
-                        <img class="img-fluid" src="../img/wiki/ElWater.png" style="transform: scale(-1, 1)">
-                        <p>Electric Water Drilling Rig в собранной форме</p>
+                        <img class="img-fluid" src="../../img/wiki/primwaterpump.png" style="transform: scale(-1, 1)">
+                        <p>Primitive Water Pump в собранной форме</p>
 
                     </div>
                 </div>
@@ -114,13 +113,15 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Машина выкачивает воду из бедрока с помощью электричества, в зависимости от биома в котором
-                        находится контролер, тира Energy Hatch и Output Hatch.
+                        Машина генерирет воду без электричества в зависимости от биома в котором находится контролер.
                         <hr>
 
                         <p style="font-weight: bold; margin-bottom: -5px">Коэффициент генерации воды:</p><br>
                         Коэффициент генерации воды - h.
-                        Коэффициент изменяется с помощью тира Energy Hatch и Output Hatch.<br>
+                        Коэффициент изменяется с помощью Output Hatch:
+                        <li>Pump Output Hatch: h = 1</li>
+                        <li>ULV Output Hatch: h = 2</li>
+                        <li>LV Output Hatch: h = 3</li>
 
                         <br>
                         <p style="font-weight: bold; margin-bottom: -5px">Биомный коэффициент:</p><br>
@@ -138,7 +139,7 @@
                         <br>
                         <p style="font-weight: bold; margin-bottom: -5px">Генерации воды:</p><br>
                         Вода генерируется при двух показателях (коэффициентах) по следующей формуле:<br>
-                        Генерация воды (L/s) = (1 * 2 ^ h) * 2 * b
+                        Генерация воды (L/s) = h * b
 
                     </div>
                     <div id="content-right">
@@ -146,8 +147,12 @@
                             <b style="color: black;">Пример генерации воды</b>
                         </p>
                         <p style="text-align: justify;">
-                            В биоме Plains c HV Energy Hatch генерация воды будет равна:<br>
-                            <em>Генерация воды = (1 * 2 ^ 3) * 2 * 250 = 2000 L/s.</em>
+                            В биоме Plains c Pump Output Hatch генерация воды будет равна:<br>
+                            <em>Генерация воды = 250 * 1 = 250 L/s.</em>
+                        </p>
+                        <p style="text-align: justify;">
+                            В биоме River c LV Output Hatch генерация воды будет равна:<br>
+                            <em>Генерация воды = 1000 * 3 = 3000 L/s.</em>
                         </p>
                         <p style="padding-top: 10px; padding-bottom: 8px;">
                             <b style="color: black;">Калькулятор генерации воды</b><br>
@@ -166,18 +171,12 @@
 
 
                         <select id="tierwater" style="width: 100%; margin-bottom: 8px;" type="text">
-                            <option disabled selected value="Хэтч">Выберите Output/Energy Hatch</option>
-                            <option value="1">LV Output/Energy Hatch</option>
-                            <option value="2">MV Output/Energy Hatch</option>
-                            <option value="3">HV Output/Energy Hatch</option>
-                            <option value="4">EV Output/Energy Hatch</option>
-                            <option value="5">IV Output/Energy Hatch</option>
-                            <option value="6">LuV Output/Energy Hatch</option>
-                            <option value="7">ZPM Output/Energy Hatch</option>
-                            <option value="8">UV Output/Energy Hatch</option>
-                            <option value="9">UHV Output/Energy Hatch</option>
+                            <option disabled selected value="Хэтч">Выберите Output Hatch</option>
+                            <option value="1">Pump Output Hatch</option>
+                            <option value="2">ULV Output Hatch</option>
+                            <option value="3">LV Output Hatch</option>
                         </select>
-                        <button onclick="elWater()" style="margin-top: 10px;">Рассчитать</button>
+                        <button onclick="primitiveWater()" style="margin-top: 10px;">Рассчитать</button>
                         <p id="totalwater"></p>
                     </div>
                 </div>
@@ -191,37 +190,34 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Для постройки этого мультиблока вам понадобятся 2 типа блоков: Solid Steel Machine Casing и
-                        Steel Frame Box.</br>
+                        Для постройки этого мультиблока вам понадобятся 2 типа блоков: Primitive Pump Deck и Wood Frame
+                        Box.<br>
                         <hr>
-                        <li>Energy Hatch: 1x</li>
-                        <li>Maintenance Hatch: 1x</li>
-                        <li>Output Hatch: 1x</li>
-                        Остальные люки обслуживания не требуются.
+                        Output Hatch (устанавливается в красном квадрате на голограмме):
+                        Остальные люки обслуживания не требуются.<br>
+
+                        <br>*Не забудьте включить мультиблок с помощью Soft Mallet
                         <hr>
 
                         <p>Для включения голограммы (подсказка при постройке) используйте Multiblock Machine Blueprint
                             из мода TecTech, кликните им по контролеру мультиблока.</p>
 
-                        <p style="font-weight: bold; margin-bottom: -5px">Важно!</p>
-                        <p>В структуре Energy Hatch и Output Hatch должны быть одного тира.</p>
-
-                        Не забудьте положить Mining pipe в слот контролера, либо в дополнительный Input Bus.
-
-
                     </div>
                     <div id="content-right">
 
-                        <img class="img-fluid" src="../img/wiki/SteelSolid.png" width="150">
-                        <p>Solid Steel Machine Casing</p>
+                        <img class="img-fluid" src="../../img/wiki/PrimitivePumpDeck.png" width="150">
+                        <p>Primitive Pump Deck</p>
 
-                        <img class="img-fluid" src="../img/wiki/SteelFrame.png" width="150">
-                        <p>Steel Frame Box</p>
+                        <img class="img-fluid" src="../../img/wiki/WoodFrameBox.png" width="150">
+                        <p>Wood Frame Box</p>
 
                     </div>
                 </div>
             </div>
         </div>
+
+
+    </div>
     </div>
 </section>
 <!-- End Service Area -->
@@ -248,19 +244,19 @@
 </div>
 <!-- ####################### End Scroll to Top Area ####################### -->
 
-<script src="../js/vendor/jquery-2.2.4.min.js"></script>
-<script src="../js/vendor/bootstrap.min.js"></script>
-<script src="../js/easing.min.js"></script>
-<script src="../js/hoverIntent.js"></script>
-<script src="../js/superfish.min.js"></script>
-<script src="../js/mn-accordion.js"></script>
-<script src="../js/jquery.ajaxchimp.min.js"></script>
-<script src="../js/jquery.magnific-popup.min.js"></script>
-<script src="../js/owl.carousel.min.js"></script>
-<script src="../js/jquery.nice-select.min.js"></script>
-<script src="../js/isotope.pkgd.min.js"></script>
-<script src="../js/mail-script.js"></script>
-<script src="../js/wow.min.js"></script>
-<script src="../js/main.js"></script>
+<script src="../../js/vendor/jquery-2.2.4.min.js"></script>
+<script src="../../js/vendor/bootstrap.min.js"></script>
+<script src="../../js/easing.min.js"></script>
+<script src="../../js/hoverIntent.js"></script>
+<script src="../../js/superfish.min.js"></script>
+<script src="../../js/mn-accordion.js"></script>
+<script src="../../js/jquery.ajaxchimp.min.js"></script>
+<script src="../../js/jquery.magnific-popup.min.js"></script>
+<script src="../../js/owl.carousel.min.js"></script>
+<script src="../../js/jquery.nice-select.min.js"></script>
+<script src="../../js/isotope.pkgd.min.js"></script>
+<script src="../../js/mail-script.js"></script>
+<script src="../../js/wow.min.js"></script>
+<script src="../../js/main.js"></script>
 </body>
 </html>
